src/test/deca/context/invalid/created/cast/int_boolean.deca
// Description :
//    test cast entre un int et boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>
	

class A {}
{
(int)(true);
}
